--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ fabric.properties
 # Azure Toolkit for IntelliJ plugin
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
+.idea/*
