--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 .idea/*
+main
